# ABIChallenge

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tree.txt
.github/workflows/: action.yaml
backend_app/: iris_model.pkl
backend_app/src/: app.py  utils.py
backend_app/src/controllers/: history_controller.py  model_controller.py  singleton_model_controller.py
backend_app/src/schemas/: iris_input.py  iris_response.py
backend_app/src/services/: connection.py  history_service.py  prediction_service.py
frontend_app/: pyproject.toml
notebooks/: training.ipynb
tests/: iris_test.csv  model_controllers_test.py
