[tool.poetry]
name = "abichallenge-erickcalderin"
version = "0.1.0"
description = "AB InBev MLOps Challenge v7"
authors = ["Erick Calderin"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
