[tool.poetry]
name = "frontend-app"
version = "0.1.0"
description = "Frontend application"
authors = ["Erick Calderin"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
